Fix for stopdesign theme's not wrapping image desc.
git-svn-id: http://www.zenphoto.org/svn/trunk@3837 46129fc4-274e-7f48-8cfa-5da4c607681c

--- a/themes/stopdesign/css/photos.css
+++ b/themes/stopdesign/css/photos.css
@@ -809,7 +809,7 @@ html>body #desc h1 {
   }
 #descText {
 	margin-left: 265px;
-	white-space: nowrap;
+	width:35%;
 }
 #desc div[style="display: block;"] { 
 	margin-left:255px; 
